fix overflow bug

--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -1,5 +1,10 @@
 @import "~/assets/styles/colors.scss";
 
+body {
+  max-width: 100%;
+  overflow: hidden;
+}
+
 // Nav
 .nav-link-content {
   text-transform: uppercase;
